--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.11",
     "nodemon": "^2.0.7",
-    "normalize-url": "^6.0.1"
+    "normalize-url": "^6.0.1",
+    "socket.io": "^4.1.2"
   }
 }
