--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
-    "server": "nodemon server/index.js",
-    "client": "cd client && npm run start"
+    "server": "nodemon server/index.js"
   },
   "author": "Jaleel D Gilbert",
   "license": "MIT",
