--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL = "mongodb+srv://Jaleel:Tech1212@social-media.pok1e.mongodb.net/ArtSketch?retryWrites=true&w=majority"
+MONGO_URI = "mongodb+srv://Jaleel:Tech1212@social-media.pok1e.mongodb.net/ArtSketch?retryWrites=true&w=majority"
 SECRET = "mytoken"
